fix uneven

--- a/src/Components/FormUser/FormUser.css
+++ b/src/Components/FormUser/FormUser.css
@@ -1,6 +1,5 @@
 /* Component  */
 .LoginRegisterBtn {
-    
     transition: transform .15s ease-in;
     cursor: pointer;
 
@@ -8,10 +7,11 @@
     color: #000;
     border-radius: 5px;
     background-color: #fff;
-    width: 5rem;
-    padding: .25rem;
-    margin: .25rem;
-    font-size: 1rem;
+    width: 8rem;
+    padding: .25rem .75rem;
+    margin-bottom: .75rem;
+    font-size: 1.25rem;
+    text-transform: uppercase;
 }
 /* Component  */
 .LoginRegisterBtn:hover {
